# xsoar-mcp

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  smithery.yaml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: installation-powershell.md  installation-python.md
examples/: agent.py  claude_desktop_config.json  xsoar_tools.py
powershell/: xsoar-agent.ps1
src/xsoar_mcp/: __init__.py  client.py  server.py  utils.py
tests/: test_client.py  test_server.py  test_utils.py
