[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xsoar-mcp"
version = "0.1.0"
description = "MCP server for Palo Alto Cortex XSOAR — incident management, playbook execution, and IOC search via AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "xsoar", "soar", "security", "cortex", "palo-alto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
agent = [
    "openai>=1.0.0",
]
dev = [
    "ruff>=0.4.0",
]

[project.scripts]
xsoar-mcp = "xsoar_mcp.server:main"

[project.urls]
Homepage = "https://github.com/davutselcuk/xsoar-mcp"
Repository = "https://github.com/davutselcuk/xsoar-mcp"
Issues = "https://github.com/davutselcuk/xsoar-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xsoar_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
